# tiny-dns-resolver

./: .gitignore  Makefile  README.md  pyproject.toml
src/tiny_dns_resolver/: main.py  packet.py  resolver.py
tests/: test_resolver.py
